src/test/ui/traits/traits-multidispatch-bad.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/traits-multidispatch-bad.rs:19:5
   |
LL |     test(22i32, 44i32);
   |     ^^^^^-----^^^^^^^^
   |          |
   |          expected `_`, found `i32`
   |
note: function defined here
  --> $DIR/traits-multidispatch-bad.rs:13:4
   |
LL | fn test<T,U>(_: T, _: U)
   |    ^^^^      ----  ----
help: provide an argument of the correct type
   |
LL |     test(22i32, {u32});
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
